# mc_nis2

./: .gitattributes  .gitignore  A011_READONLY_INVENTORY_PLAN.md  A032_EVAL_BASELINE.md  ACCEPTANCE_CRITERIA.md  ACTION_PLAN_SUBMISSION_READINESS.md  AGENTS.md  AI_ENVIRONMENT_APPROVAL.md  AI_USAGE_ACKNOWLEDGEMENT.md  AI_USAGE_POLICY_DRAFT.md  AUDITOR_VERSION_CONFIRMATION_REQUEST.md  BACKUP_RESTORE_TEST_PLAN.md  CODEX_HANDOFF.md  CODEX_HANDOFF_H002.md  COMPLETION_REPORT_A001_A002_A007_A035_A036.md  COMPLETION_REPORT_A003_A012.md  COMPLETION_REPORT_A004_A005.md  COMPLETION_REPORT_A006.md  COMPLETION_REPORT_A008.md  COMPLETION_REPORT_A009_A010_A013_A014_A015_A016.md  COMPLETION_REPORT_A011.md  COMPLETION_REPORT_A017.md  COMPLETION_REPORT_A018.md  COMPLETION_REPORT_A019.md  COMPLETION_REPORT_A020.md  COMPLETION_REPORT_A021.md  COMPLETION_REPORT_A022.md  COMPLETION_REPORT_A023_A024_A028_A033_A034.md  COMPLETION_REPORT_A025.md  COMPLETION_REPORT_A026.md  COMPLETION_REPORT_A027.md  COMPLETION_REPORT_A029.md  COMPLETION_REPORT_A030.md  COMPLETION_REPORT_A031.md  COMPLETION_REPORT_A032.md  COMPLETION_REPORT_A037_A038_A039_A040_A041.md  COMPLETION_REPORT_A042.md  COMPLETION_REPORT_DOCUMENT_INTAKE_2026-07-20.md  COMPLETION_REPORT_H001.md  COMPLETION_REPORT_H002.md  (+47 more)
config/: ai_usage_policy.json  continuous_assurance_pilot.json  eval_config.json  evidence_store.example.json  h002_agent_pilot.json  inventory_export_plan.json  portal_auth_policy.json  portal_mvp.json  project.example.json  sharepoint_graph_readiness.json  sharepoint_integration.json
data/: actions.csv  (+24 more)
(+85 files in other folders)
